2017-07-04: Ver. 0.3-4
  * Fix a finalize bug in "spmd.finalize()" C code.

2016-12-17: Ver. 0.3-3
  * Change web address.

2016-10-08: Ver. 0.3-3
  * Add .travis.yml.

2016-09-25: Ver. 0.3-3
  * Change to "https://cran.r-project.org/...".

2016-07-17: Ver. 0.3-3
  * Improve Makevars.win for both MS-MPI HPC package and SDK package.

2016-07-14: Ver. 0.3-2
  * Use Rtools34.
  * Use MS-MPI v7.1.12437 published on 06/22/2016.

2016-01-27: Ver. 0.3-2
  * Drop initialization of .pbd_env.
  * Migrate to R-3.3.* and R-3.4.*.
  * Use Rtools33.

2015-12-30: Ver. 0.3-1
  * Drop pbdCS temporarily.

2015-12-19: Ver. 0.3-1
  * Add pbd_opt().

2015-11-03: Ver. 0.3-0
  * Simplify global options.

2015-10-24: Ver. 0.3-0
  * Change to common environment, but this will create masking, overwritting,
    and texting problems when other pbdR pacakges are loading.
  * Change again to .pbd_env, .mpiopt_set(), .mpiopt_get(), and
    .mpiopt_init() with huge options rewritting.

2015-10-22: Ver. 0.3-0
  * Fix comm.set.seed problem.

2015-10-17: Ver. 0.3-0
  * Drop "data/envir.r".

2015-09-05: Ver. 0.3-0
  * Check with ZMQ and CS.
  * Rename global Env again.

2015-08-30: Ver. 0.3-0
  * Reversion to 0.3.
  * Change option controlling method. Move from data to new.env.

2015-08-16: Ver. 0.2-6
  * Add barrier to task.pull, pbdLapply, pbdSapply, and pbdApply.

2015-08-10: Ver. 0.2-6
  * Add alltoall and alltoallv, example, manual.

2015-07-21: Ver. 0.2-6
  * Modify Description.
  * Hide spmd_comm_spawn if MPI2 is not defined (needed for impi).

2015-07-03: Ver. 0.2-6
  * Check autoloaded MPI symbol for  mac.
  * Change NAMESPACE for --as-cran.
  * Change zzz.r.in for dyn.load() using local=FALSE.

2015-05-30: Ver. 0.2-6
  * Register comm.sort in S3method.
  * Modify Description.

2014-03-20: Ver. 0.2-6
  * Add bcast message.

2014-12-07: Ver. 0.2-6
  * Merge R_CallMethodDef for speeding up dynload problems.

2014-10-19: Ver. 0.2-6
  * Add is.finalized() for the CS problem.
